--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,7 +33,7 @@ h1 {
 }
 
 h2 {
-  font-size: x-large;
+  font-size: large;
   margin-bottom: 30px;
 }
 
@@ -44,7 +44,63 @@ p {
 
 }
 
+input:focus {
+  background-color: #fffdf6;
+}
 
+.navigering {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-image: radial-gradient(#fece6e, #fcd382, #fece6e);
+  color: #1c1d1d;
+  box-shadow: 5px 5px 10px rgba(218, 211, 201);
+}
+
+.navigering a {
+  color: #1c1d1d;
+  text-decoration: none;
+  padding: 10px 15px;
+  font-size: 1.2rem;
+  margin-right: 30px;
+}
+
+.navigering a:hover {
+  background-color: #ffde9b;
+  border-radius: 7px;
+  font-weight: 700;
+}
+
+/* Logotyp på vänster sida */
+.logo {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+/* Menyn på stora skärmar */
+.menu {
+  display: flex;
+
+}
+
+.menu a {
+  margin-left: 20px;
+}
+
+
+
+/* Hamburgermenyn (gömd på stora skärmar) */
+.hamburger {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+/* Göm checkboxen (den används bara för att hantera menyn) */
+.menu-toggle {
+  display: none;
+}
 
 
 /*Textinnehåll på alla sidor*/
@@ -74,7 +130,7 @@ p {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-
+ margin-bottom: 80px;
 }
 
 * {
@@ -103,12 +159,33 @@ td {
   flex-direction: column;
   align-items: center;
   padding: 40px;
-  margin-bottom: 50px;
   text-align: center;
   box-shadow: 5px 5px 10px rgba(218, 211, 201);
 }
 
 .project2 {
+  background-color: #bac9d3;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  align-items: center;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgba(218, 211, 201);
+}
+
+.project3 {
+  background-color: #b8d1d2;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  align-items: center;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgba(218, 211, 201);
+}
+
+.project4 {
   background-color: #bac9d3;
   border-radius: 15px;
   display: flex;
@@ -136,7 +213,7 @@ td {
   white-space: nowrap;
   padding: 15px 30px;
   transition-duration: 0.5s;
-
+  cursor: pointer;
 }
 
 .button1:hover {
@@ -145,7 +222,7 @@ td {
 }
 
 footer {
-  background-color: #fece6e;
+  background-image: radial-gradient(#fece6e, #fcd382, #fece6e);
   padding-top: 5px;
   margin-top: 100px;
 }
@@ -165,10 +242,13 @@ footer {
   padding: 15px;
   vertical-align: top;
   text-align: left;
-
+  cursor: pointer;
 
 }
-
+.cell p:hover{
+  cursor: pointer;
+font-weight: bold;
+}
 
 .socialmediaicons {
   display: flex;
@@ -233,6 +313,7 @@ footer {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
   padding: 12px;
   border: 1px solid black;
   border-radius: 4px;
@@ -252,6 +333,23 @@ textarea {
 
 }
 
+#animation {
+  width: 100%;
+  height: 10px;
+  background-color: white;
+  animation-name: line;
+  animation-duration: 10s;
+  animation-iteration-count: 5;
+}
+
+@keyframes line {
+  0%   {background-color: white;}
+  20%  {background-color: #fece6e;}
+  40%  {background-color: #b8d1d2;}
+  70%  {background-color: #fece6e;}
+  90%  {background-color: white;}
+}
+
 #imganna {
   margin-top: 10px;
   margin-bottom: 100px;
@@ -266,6 +364,7 @@ textarea {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 40px;
 }
 
 .timeline::after {
@@ -345,112 +444,6 @@ textarea {
   position: relative;
   border-radius: 6px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.navigering {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  background-color: #fece6e;
-  color: #1c1d1d;
-  box-shadow: 5px 5px 10px rgba(218, 211, 201);
-}
-
-.navigering a {
-  color: #1c1d1d;
-  text-decoration: none;
-  padding: 10px 15px;
-  font-size: 1.2rem;
-  margin-right: 30px;
-}
-
-.navigering a:hover {
-  background-color: #ffde9b;
-  border-radius: 7px;
-  font-weight: 700;
-}
-
-/* Logotyp på vänster sida */
-.logo {
-  font-weight: bold;
-  font-size: 20px;
-}
-
-/* Menyn på stora skärmar */
-.menu {
-  display: flex;
-
-}
-
-.menu a {
-  margin-left: 20px;
-}
-
-
-
-/* Hamburgermenyn (gömd på stora skärmar) */
-.hamburger {
-  display: none;
-  font-size: 30px;
-  cursor: pointer;
-}
-
-/* Göm checkboxen (den används bara för att hantera menyn) */
-.menu-toggle {
-  display: none;
-}
-
-
-
 
 
 
@@ -614,7 +607,7 @@ textarea {
     /* Full bredd för varje cell */
     padding: 10px;
     text-align: center;
-    cursor: pointer;
+    
 
   }
 
