--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,13 +72,11 @@ input:focus {
   font-weight: 700;
 }
 
-/* Logotyp på vänster sida */
 .logo {
   font-weight: bold;
   font-size: 20px;
 }
 
-/* Menyn på stora skärmar */
 .menu {
   display: flex;
 
@@ -88,16 +86,12 @@ input:focus {
   margin-left: 20px;
 }
 
-
-
-/* Hamburgermenyn (gömd på stora skärmar) */
 .hamburger {
   display: none;
   font-size: 30px;
   cursor: pointer;
 }
 
-/* Göm checkboxen (den används bara för att hantera menyn) */
 .menu-toggle {
   display: none;
 }
@@ -130,7 +124,7 @@ input:focus {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
- margin-bottom: 80px;
+  margin-bottom: 80px;
 }
 
 * {
@@ -245,9 +239,10 @@ footer {
   cursor: pointer;
 
 }
-.cell p:hover{
+
+.cell p:hover {
   cursor: pointer;
-font-weight: bold;
+  font-weight: bold;
 }
 
 .socialmediaicons {
@@ -343,11 +338,25 @@ textarea {
 }
 
 @keyframes line {
-  0%   {background-color: white;}
-  20%  {background-color: #fece6e;}
-  40%  {background-color: #b8d1d2;}
-  70%  {background-color: #fece6e;}
-  90%  {background-color: white;}
+  0% {
+    background-color: white;
+  }
+
+  20% {
+    background-color: #fece6e;
+  }
+
+  40% {
+    background-color: #b8d1d2;
+  }
+
+  70% {
+    background-color: #fece6e;
+  }
+
+  90% {
+    background-color: white;
+  }
 }
 
 #imganna {
@@ -377,8 +386,6 @@ textarea {
   left: 50%;
   margin-left: -3px;
 }
-
-
 
 .container {
   padding: 10px 40px;
@@ -520,19 +527,16 @@ textarea {
     padding: 20px;
   }
 
-  /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
   }
 
-  /* Full-width containers */
   .container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
   }
 
-  /* Make sure that all arrows are pointing leftwards */
   .container::before {
     left: 60px;
     border: medium solid white;
@@ -540,19 +544,15 @@ textarea {
     border-color: transparent white transparent transparent;
   }
 
-  /* Make sure all circles are at the same spot */
   .left::after,
   .right::after {
     left: 15px;
   }
 
-  /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
   }
 
-
-  /* Menyn (länkar) är gömd som standard */
   .menu {
     display: none;
     flex-direction: column;
@@ -566,12 +566,10 @@ textarea {
     box-shadow: 5px 5px 10px rgba(218, 211, 201);
   }
 
-  /* När checkboxen är markerad, visa menyn */
   .menu-toggle:checked+.hamburger+.menu {
     display: flex;
   }
 
-  /* Länkarna i menyn på små skärmar */
   .menu a {
     padding: 15px;
     text-align: center;
@@ -584,38 +582,25 @@ textarea {
     padding-right: 20px;
   }
 
-
-  /* Hamburgermeny syns på små skärmar */
   .hamburger {
     display: block;
   }
 
-
-
   .footertable {
     display: flex;
     flex-direction: column;
-    /* Stapla innehållet vertikalt lägg till kunna hovra och få fram pekande hand*/
     align-items: center;
-
   }
 
   .cell {
     display: block;
-    /* Varje cell blir en rad */
     width: 100%;
-    /* Full bredd för varje cell */
     padding: 10px;
     text-align: center;
-    
-
   }
 
   .socialmediaicons {
     display: flex;
     justify-content: center;
   }
-
-
-
 }
